Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66243

Deadlock when changing surface of surface selector in framegraph.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.10.1
    • 5.10.1
    • Qt3D
    • None

      This happened after the OnDemand fixes and addition of barriers.

      When setting the framegraph surface to nullptr and then resetting it to a valid surface, nothing happens. The render thread is hanging in Renderer::waitForRenderJobs(), so I assume it is a deadlock. 

      This is easy to reproduce. I modified the basicshapes-cpp example by adding two buttons, one that sets the surface in the framegraph surface selector to null, the other to the original surface. 

       

        1. main.cpp
          8 kB
          Harald Vistnes
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dragly Svenn-Arne Dragly
            harald Harald Vistnes
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes